kubernetes/ingress/storage-ns-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage-gateway-ingress
  namespace: storage-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: teste-local.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-api-svc
                port:
                  number: 8080
